--- a/style.css
+++ b/style.css
@@ -29,12 +29,16 @@ nav,
 #credits {
   background-color: black;
   height: 60px;
-  /* Your code goes here */
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .container {
   width: 500px;
-  /* Your code goes here */
+  display: flex;
+  justify-content:space-between;
+  align-items: center;
 }
 
 .button {
